Добавлена возможность поиска книг в библиотеке

--- a/src/main/webapp/WEB-INF/views/books/index.html
+++ b/src/main/webapp/WEB-INF/views/books/index.html
@@ -16,10 +16,15 @@
 <form th:method="GET" th:action="@{/books/new}">
     <input type="submit" value="Создать новую книгу"/>
 </form>
-
+<form th:method="GET" th:action="@{/books/search}">
+    <input type="submit" value="Поиск по книгам"/>
+</form>
 <form th:method="GET" th:action="@{/people}">
     <input type="submit" value="Перейти в раздел 'ЛЮДИ'"/>
 </form>
+
+
+
 
 
 
